...
    onMapReady: (MapView, MaptecMap) -> Unit = { _, _ -> },
    onStyleRendered: (MapView, MaptecMap, Style) -> Unit = { _, _, _ -> },
) {
    val context = LocalContext.current
    var isStyleRendered by remember(cameraPosition) { mutableStateOf(false) }

    val mapView = remember(cameraPosition) {
        val options = defaultDemoMapOptions(context).apply {
            camera(cameraPosition)
        }
        MapView(context, options).apply {
            onCreate(null)
            tag = "mapView"
...
